# rBackup

./: .gitignore  .gitmodules  CHANGELOG.it.md  CHANGELOG.md  Cargo.toml  README.it.md  README.md  build-release.bat  build-release.sh  build.rs  copilot-custom.json  rbackup.rc
.github/: copilot-custom.json  copilot-instructions.md
.github/workflows/: aur.yml  ci.yml  rust.yml
assets/: TRANSLATIONS.md  rbackup.rc  translations.json
res/: rbackup.rc
scripts/translations_tool/: .gitignore  Cargo.toml
scripts/translations_tool/src/: main.rs
src/: cli.rs  commands.rs  config.rs  copy.rs  elevator.rs  lib.rs  main.rs  output.rs  ui.rs  utils.rs
tests/: translations_consistency.rs  utils_integration.rs
