[package]
name = "rbackup"
version = "0.6.1"
edition = "2024"
license = "MIT"
description = "Incremental, cross-platform and multithreaded backup tool written in Rust"
readme = "README.md"
homepage = "https://github.com/umpire274/rbackup"
repository = "https://github.com/umpire274/rbackup"
keywords = ["backup", "cli", "rsync", "robocopy", "multiplatform"]
categories = ["command-line-utilities", "filesystem"]
exclude = [
    "target/*",
    ".idea/*",
    ".github/*",
    ".gitignore",
    "config/*",
    "*.sh",
    "*.bat",
    "/dist/*",
    "/temp_build/*"
]
build = "build.rs"

[build-dependencies]
winresource = "0.1.26"

[package.metadata.winresource]
Icon = "res/rbackup.ico"

[package.metadata.bundle]
name = "rBackup"
identifier = "eu.umpire274.rbackup"
icon = ["res/rbackup.png"]

[dependencies]
clap = { version = "4.5.59", features = ["derive"] }
crossterm = "0.29.0"
walkdir = "2.5.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
chrono = "0.4.43"
sys-locale = "0.3.2"
globset = "0.4.18"
serde_yaml = "0.9.33"
rayon = "1.11.0"
unicode-width = "0.2.2"

[dev-dependencies]
tempfile = "3.25.0"
filetime = "0.2.27"

[profile.release]
opt-level = 3
